# project-zenith

./: .gitmojirc.json  Cargo.toml  README.md  build.rs  bun.lockb  fleet.toml  package.json  renovate.json  set_version.sh
.cargo/: config.toml
.github/workflows/: build-page.yaml  build-rust.yaml
assets/: materials.json
benches/: chunk.rs
book/: .gitignore  create-book.sh
client/: Cargo.toml  fleet.toml
client/.cargo/: config.toml
client/assets/shaders/: array_texture.wgsl  block_material.wgsl
client/benches/: chunk_compression.rs  compession.rs  criterion.rs  render.rs
client/src/: discord.rs  lib.rs  main.rs  startup.rs  utils.rs
client/src/transport/: mod.rs
client/src/ui/: main_menu.rs  mod.rs
client/src/world/: block_data.rs  blockdata.rs  material.rs  mod.rs  pbr_block_material.rs  texture.rs
client/src/world/camera/: lod.rs  mod.rs
client/src/world/chunk/: chunk_apply_block_materials.rs  chunk_apply_standart_materials.rs  chunk_data.rs  chunk_mesh.rs  chunk_render.rs  chunk_render_mesh.rs  grid.rs  mesh.rs  mod.rs  new_voxel.rs  voxel.rs  voxel2.rs  voxel3.rs  voxel_render.rs
client/src/world/cubes/: mesh.rs  mod.rs  pbr.rs
client/src/world/environment/: mod.rs
client/tests/: chunk_compression.rs  render.rs
client/ui/: index.html
docs/: book.adoc  package.json
docs/blog/: authors.yml
docs/client/: client.adoc
docs/docs/user/: index.md
docs/src/pages/: impressum.md
lib/common/: Cargo.toml
lib/common/src/: compressible.rs  humanize.rs  lib.rs  registry.rs  storage.rs
lib/common/src/protocol/: mod.rs
lib/common/src/resource/: mod.rs
lib/mesher/: Cargo.toml
lib/mesher/benches/: b16-benches.rs  b32-benches.rs  b64-benches.rs  benches.rs  utils.rs
lib/mesher/src/: b16.rs  b32.rs  b64.rs  cube_slice.rs  lib.rs  meshing.rs  occlusion_culling.rs  t1.rs
lib/protocol/: Cargo.toml  build.rs  notes.md
lib/protocol/experiments/: Cargo.toml
lib/protocol/experiments/src/: main.rs
lib/protocol/proto/: _attributes.json  chunk.proto  common.proto  packet_lobby_client.proto  packet_lobby_server.proto  packet_play_client.proto  packet_play_server.proto  services_lobby_server.proto  services_play_client.proto  services_play_server.proto
lib/protocol/proto/lobby/client/: request.proto
lib/protocol/proto/lobby/server/: response.proto
lib/protocol/proto/play/client/: packet.proto
lib/protocol/proto/play/server/: packet.proto
lib/protocol/src/: crypto.rs  encoding.rs  lib.rs  local.rs  stream_encoding.rs
lib/protocol/src/client/: mod.rs
lib/protocol/src/server/: agents.rs  mod.rs
lib/protocol/src/transport/: local.rs  mod.rs
libs/prost_stream/: Cargo.toml
libs/prost_stream/src/: reader.rs
page/: bun.lockb  docusaurus.config.ts  package.json
page/blog/: placeholder.md
page/docs/: index.md
page/docs/999-contribute/architecture/: 002-worlds.md  003-render-voxel-world.md  index.md
page/docs/architecture/: index.md
page/src/pages/: index.tsx
page/src/sidebars/: sidebars.ts
proto/: _attributes.json  channel.proto  chunk.proto  common.proto  datagram.proto  error.proto  networking.proto  packet_play_client.proto  packet_play_server.proto  packets.proto
server/: Cargo.toml
server/examples/: test-server.rs
server/src/: lib.rs
server/src/agent/: mod.rs  player_agent.rs
server/src/core/: mod.rs
server/src/savegame/: mod.rs
server/src/tests/: mod.rs
server/src/transport/: local.rs  mod.rs
server/src/world/: attention.rs  block.rs  material.rs  mod.rs
server/src/world/chunk/: block_data.rs  grid.rs  mod.rs
server/src/world/chunk/generator/: dev_flat.rs  mod.rs
src/: bundle.rs  chunk.rs  common.rs  compressible.rs  kvs.rs  lib.rs  lzw.rs  material.rs  mono_bundle.rs  network.rs  registry.rs  storage.rs  utils.rs
src/proto/: mod.rs
src/protocol/: .gitignore  mod.rs
src/resource/: mod.rs
