[package]
name = "game2"
version = "0.0.1713974630-INDEV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion2 = { version = "0.9.0", features = ["tokio", "html_reports"] }

[workspace]
resolver = "2"
members = [
    "client",
    "lib/protocol",
    "lib/common",
    "lib/mesher", "server",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[[bench]]
name = "chunk"
harness = false

