[package]
name = "client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["async-io", "multi-threaded", "webp"] }
clap = { version = "4.5.7", features = ["cargo", "derive", "env", "string", "unicode"] }
error-stack = "0.4.1"
fast_log = { version = "1.6.10", features = ["zip"] }
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
bimap = { version = "0.6.3", features = ["serde"] }
common = { path = "../lib/common" }
rayon = "1.10.0"
block-mesh = "0.2.0"
bitvec = { version = "1.0.1", features = ["serde"] }
#bevy_rapier3d = { version = "0.25.0", features = ["wasm-bindgen", "serde", "parallel", "debug-render"] }
#serde-big-array = "0.5.1"
slab = { version = "0.4.9", features = ["serde"] }
serde_json = "1.0.108"
#crunch = "0.5.3"
#wtransport = "0.1.10"
# array-init = "2.1.0"
# fast-voxel-traversal = "0.5.0"
rclite = "0.2.4"
bevy_egui = "0.27.0"
bevy-inspector-egui = "0.24.0"
#specs = { version = "0.20.0", features = ["uuid_entity"] }
unstructured = "0.5.1"
#unique-type-id = "1.3.0"
bincode = "1.3.3"
futures-lite = "2.2.0"
futures-polling = "0.1.1"
#wry = { version = "0.39.1", features = ["devtools", "transparent"] }
#http = "1.1.0"
image = { version = "0.25.1", features = ["avif", "rayon"] }
tempfile = "3.10.1"
bevy_atmosphere = "0.9.1"
discord-rpc-client = "0.4.0"
itertools = "0.13.0"
hashbrown = "0.14.3"
#rkyv = "0.7.44"
ahash = "0.8.11"
#palette = { version = "0.7.6", features = ["serde", "random"] }
dominant_color = "0.4.0"
uuid = { version = "1.8.0", features = ["v4", "serde", "rng"] }
bitflags = { version = "2.5.0", features = ["serde", "std"] }
cached = { version = "0.51.3", features = ["wasm", "directories"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
smallvec = { version = "1.13.2", features = ["union", "serde"] }
bevy_flycam = "0.13.0"
mesher = { path = "../lib/mesher" }
bevy_replicon = "0.26.2"
hex = "0.4.3"


[dev-dependencies]
rstest = "0.21.0"
criterion = { version = "0.5.1", features = ["tokio", "html_reports"] }

[lib]
path = "src/lib.rs"

[features]
default = ["debug-dyn"]
debug-dyn = ["bevy/dynamic_linking"]
