[package]
name = "server"
version = "0.0.1-INDEV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0.193", features = ["derive", "alloc", "rc"] }
game2 = { path = ".." }
uuid = { version = "1.6.1", features = ["v4", "serde", "wasm-bindgen", "getrandom"] }
tokio = { version = "1.35.1", features = ["full"] }
bincode = { version = "1.3.3", features = ["i128"] }
async-trait = "0.1.77"
lz4_flex = "0.11.1"
bimap = { version = "0.6.3", features = ["serde"] }
zstd = { version = "0.13.0", features = ["wasm", "bindgen"] }
moka = { version = "0.12.2", features = ["log", "future", "async-lock", "async-trait", "js"] }
rayon = "1.8.0"
rand = { version = "0.8.5", features = ["log", "serde"] }
opensimplex2 = "1.0.1"
wtransport = "0.1.10"
quinn = "0.10.2"
bevy = { version = "0.13.0", default-features = false, features = ["multi-threaded", "async-io"] }
webrtc = "0.10.0"
pathfinding = "4.8.2"
hashbrown = { version = "0.14.3", features = ["serde", "rkyv", "rayon"] }
serde_json = "1.0.115"
rkyv = { version = "0.7.44", features = ["hashbrown", "uuid", "validation", "archive_be"] }

