[package]
name = "server"
version = "0.0.1713974630-INDEV"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false,features = ["trace"] }
bracket-noise = "0.8.7"
futures-lite = "2.3.0"
tokio = { version = "1.38.0", features = ["full"] }
worley-noise = { version = "3.7.2", features = ["getrandom"] }
