[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false,features = ["trace","serialize"] }
bevy_replicon = "0.26.2"
bracket-noise = "0.8.7"
futures-lite = "2.3.0"
hex = "0.4.3"
serde = { version = "1.0.203", features = ["derive", "alloc"] }
tokio = { version = "1.38.0", features = ["full"] }
worley-noise = { version = "3.7.2", features = ["getrandom"] }
blake3 = { version = "1.5", features = [ "pure" ] }