[package]
name = "common"
version = "0.0.1713974630"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
bytemuck = { version = "1.14.0", features = ["aarch64_simd", "wasm_simd"] }
itertools = "0.13.0"
lz4_flex = "0.11.1"
packedvec = { version = "1.2.4", features = ["serde"] }
rayon = "1.8.0"
serde = { version = "1.0.194", features = ["derive", "rc", "alloc"] }
slab = { version = "0.4.9", features = ["serde"] }
smallvec = { version = "1.11.2", features = ["serde", "union", "const_new", "write"] }
unstructured = "0.5.1"
bevy = { version = "0.13.0", default-features = false }
prost = { version = "0.12.3", features = ["std", "prost-derive", "default"] }
prost-types = "0.12.3"
deepsize = { version = "0.2.0", features = ["slab", "hashbrown", "smallvec"] }
hashbrown = { version = "0.14.3", features = ["rayon", "serde"] }
ahash = { version = "0.8.11", features = ["serde"] }
rand = "0.9.0-alpha.1"
serde_json = { version = "1.0.114", features = ["alloc", "indexmap"] }
hex = { version = "0.4.3", features = ["serde"] }
huffman-coding = "0.1.2"
rclite = "0.2.4"
rmp-serde = "1.3.0"
error-stack = { version = "0.4.1", features = ["serde", "anyhow"] }
rmp = "0.8.12"
bitflags = { version = "2.5.0", features = ["serde", "std"] }
uuid = { version = "1.8.0", features = ["v4", "serde", "zerocopy"] }
rmpv = { version = "1.3.0", features = ["serde", "serde_bytes", "with-serde"] }
subenum = "1.1.2"
bitcode = { version = "0.6.0", features = ["serde"] }
downcast-rs = "1.2.1"
quinn = { version = "0.11.0", features = ["ring","runtime-tokio","rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
bitvec = "1.0.1"
ordered-float = { version = "4.2.0", features = [] }
