[package]
name = "mesher"
version = "0.0.1713974630-INDEV"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
rayon = "1.10.0"
bevy = { optional = true, version = "0.13.2", default-features = false, features = [] }
serde = { version = "1.0.203", optional = true, features = ["derive"] }
serde-big-array = {version = "0.5.1",optional = true}
hashbrown = { version = "0.14.5", features = ["rayon"] }
wide = "0.7.22"
smallvec = { version = "1.13.2", features = ["union"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "csv"] }
rstest = { version = "0.21.0" }

[[bench]]
name = "b64-benches"
harness = false
[[bench]]
name = "b32-benches"
harness = false
[[bench]]
name = "b16-benches"
harness = false


[features]
default = ["bevy"]
bevy = ["dep:bevy","bevy/bevy_render"]
serde = ["dep:serde","dep:serde-big-array", "bitvec/serde"]
