[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = { version = "2.5.0", features = ["serde", "std"] }
bytes = { version = "1.6.0", features = ["serde"] }
capnp = "0.19.5"
capnp-futures = "0.19.0"
capnp-rpc = "0.19.1"
enum-assoc = "1.1.0"
error-stack = { version = "0.4.1", features = ["anyhow", "serde"] }
h3 = "0.0.5"
h3-quinn = "0.0.6"
h3-webtransport = "0.1.0"
hex = { version = "0.4.3", features = ["serde"] }
http = "1.1.0"
integer-encoding = { version = "4.0.0", features = ["tokio", "tokio_async"] }
ls-qpack = "0.1.4"
prost = { version = "0.12.6", features = ["prost-derive"] }
quinn = { version = "0.11.0", features = ["ring", "futures-io", "async-std", "async-io"] }
rcgen = { version = "0.13.1", features = ["zeroize"] }
ring = { version = "0.17.8", features = ["std"] }
rustls = { version = "0.23.7", features = ["ring", "std"] }
serde = { version = "1.0.194", features = ["derive", "rc", "alloc"] }
simd-json = { version = "0.13.10", features = ["serde"] }
subenum = "1.1.2"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["formatting", "serde", "rand", "serde-well-known", "serde-human-readable", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tonic = { version = "0.11.0", features = ["channel", "codegen","prost", "zstd"], default-features = false }
zigzag = "0.1.0"
rand = "0.8.5"
bitvec = "1.0.1"
async-read-length-limit = "0.1.3"
hpack = "0.3.0"
tonic-build = "0.11.0"
tonic-types = "0.11.0"

[build-dependencies]
capnpc = "0.19.0"
error-stack = "0.4.1"
prost-build = "0.12.3"
serde = { version = "1.0.194", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1.0.114", features = ["alloc"] }
tonic-build = "0.11.0"
walkdir = "2.4.0"
