[package]
name = "protocol"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = { version = "2.5.0", features = ["serde", "std"] }
bytes = { version = "1.6.0", features = ["serde"] }
enum-assoc = "1.1.0"
error-stack = { version = "0.4.1", features = ["anyhow", "serde"] }
hex = { version = "0.4.3", features = ["serde"] }
http = "1.1.0"
integer-encoding = { version = "4.0.0", features = ["tokio", "tokio_async"] }
prost = { version = "0.12.6", features = ["prost-derive"] }
quinn = { version = "0.11.2", features = ["ring", "futures-io", "async-std", "async-io"] }
rcgen = { version = "0.13.1", features = ["zeroize", "x509-parser"] }
ring = { version = "0.17.8", features = ["std"] }
rustls = { version = "0.23.7", features = ["ring", "std"] }
serde = { version = "1.0.194", features = ["derive", "rc", "alloc"] }
simd-json = { version = "0.13.10", features = ["serde"] }
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["formatting", "serde", "rand", "serde-well-known", "serde-human-readable", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tonic = { version = "0.12.0", features = ["channel", "codegen", "prost", "zstd"], default-features = false }
zigzag = "0.1.0"
rand = "0.8.5"
bitvec = "1.0.1"
async-read-length-limit = "0.1.3"
tonic-types = "0.11.0"
bevy = { version = "0.13.2", default-features = false, features = ["serialize"] }
diff-struct = "0.5.3"
bevy_replicon = "0.26.2"
serde-diff = "0.4.1"
bevycheck = "0.5.2"
lz4_flex = "0.11.3"
zstd = "0.13.1"
brotli = { version = "6.0.0", features = [] }
itertools = "0.13.0"
hashbrown = { version = "0.14.5", features = [] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }

[build-dependencies]
error-stack = "0.4.1"
prost-build = "0.12.3"
serde = { version = "1.0.194", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1.0.114", features = ["alloc"] }
tonic-build = "0.11.0"
walkdir = "2.4.0"
