[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = {version = "0.11.2",features = ["ring","rustls","runtime-tokio"]}
tokio = { version = "1.38.0", features = ["full"] }
rcgen = { version = "0.13.1", features = ["zeroize", "x509-parser"] }
ring = { version = "0.17.8", features = ["std"] }
rustls = { version = "0.23.9", features = ["ring", "std"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
